# LegitParticles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/ECS/Components/: LinkComponent.h  ParticleComponent.h  TriangleComponent.h
src/ECS/Context/: AnimationData.h  CameraData.h  FullscreenRendererData.h  InputData.h  MeshRendererData.h  PhysicsAnimationData.h  PhysicsData.h  RendererData.h  ShaderTestbedRendererData.h  WindowData.h
src/ECS/Scenes/: MultigridClothScene.h  ParticlesScene.h  SimpleClothScene.h
src/ECS/Systems/: Camera.h  FullscreenRenderer.h  Input.h  MeshRenderer.h  MultigridPhysics._pp  MultigridPhysics.cpp  MultigridPhysics.h  Physics.cpp  Physics.h  PhysicsAnimation.h  PhysicsCommon.cpp  PhysicsCommon.h  PhysicsGraphs.cpp  PhysicsGraphs.h  Renderer.h  ShaderTestbedRenderer.h  SkeletalAnimation.h  SparsePhysics.h  VBDPhysics.cpp  VBDPhysics.h  Window.h
src/ImGuiUtils/: ImGuiRenderer.h
src/LegitGLFW/: LegitGLFW.h
src/LegitProfiler/: ImGuiProfilerRenderer.h  ProfilerTask.h
src/LegitVulkan/: Core.h  CpuProfiler.h  Handles.h  Image.h  ImageLoader.h  ImageView.h  LegitVulkan.h  PresentQueue.h  RenderGraph.h  RenderPass.h  ShaderProgram.h  StagedResources.h  Surface.h  Synchronization.h  TimestampQuery.h  VertexDeclaration.h
src/Maths/: AlgebraicMultigridSolver.h  SparseMatrix.h  SparseMatrixUtils.h  StackStorage.h  Tensor2.h  TensorMaths.h
src/Maths/RectPacker/: RectPacker.h
src/Maths/SpriterAnimations/: SpriterImporter.h
src/Maths/StrainConstraints/: StrainConstraints.cpp  StrainConstraints.h
src/Render/Common/: DebugRenderer.h  ImGuiRenderer.h  MipBuilder.h
src/Utils/: CachedArray.h  GlmInclude.h  GroupArg.h  ScopedCtx.h
tmp/: CMakeCache.txt
vs2019project/: LegitParticles.sln
vs2019project/AlmostProject/: AlmostProject.vcxproj  AlmostProject.vcxproj.filters
